docs(requirement): v0.15 full reqs + v0.13 TDD Module 22 (Snowflake clock drift)
- LEDGER-PLATFORM-FULL-REQUIREMENTS.md v0.12 -> v0.15
  - changelog row v0.15: RaftNodeManager electionTimeoutMs overload,
    RaftOptions.setApplyBatch(16) latency tuning, removed Node.logManager
    reflection-based log recovery (empty payloads -> [APPLY_EMPTY] skip),
    test JVM --add-opens flags, Module 22 reference
- TDD-TEST-CASES.md v0.12 -> v0.13
  - Module 22: SnowflakeIdGenerator clock-drift tolerance
    TC-SNOW-01 monotonic, TC-SNOW-02 sequence rollover,
    TC-SNOW-03 <=5ms backward wait, TC-SNOW-04 >5ms backward reject
  - Phase 11 mapping row added
- ledger-core/.../utils/SnowflakeIdGeneratorTest.java (new, intent-to-add)
  implements TC-SNOW-01~04 via BackwardsClockGenerator +
  SteppedTimestampGenerator test fixtures (now-protected currentTimeMillis)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>